test/samples/invalid/interp/arr_poison.maruir
fun main(): uint8
locals arr: uint8[] *#memory, res: uint8;
{
    entry:
        arr := alloc uint8[uint8(3)] in #memory;
        load arr[uint8(2)] in res;

        return res;
}